--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ release_version: Release 3.2.2
 opa: OntoPortal Alliance
 support_email: support@ontoportal.org  # for dev support only, not for end user support
 twitter_username: ontoportal
-github_username:  ontoportal
+github_username:  majidfiaz
 email: jgraybeal@stanford.edu  # not sure what this is used for
 
 title: OntoPortal Documentation
@@ -104,7 +104,7 @@ heading_anchors: true
 # Aux links for the upper right navigation
 aux_links:
   "OntoPortal on GitHub":
-    - "//github.com/ontoportal"
+    - "//github.com/majidfiaz"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
@@ -116,7 +116,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 # External navigation links
 nav_external_links:
   - title: OntoPortal on GitHub
-    url: https://github.com/ontoportal
+    url: https://github.com/majidfiaz
 
 # Footer content
 # appears at the bottom of every page's main content
@@ -136,7 +136,7 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/ontoportal/documentation" # the github URL for your repo
+gh_edit_repository: "https://github.com/majidfiaz/documentation" # the github URL for your repo
 gh_edit_branch: "master" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
